[package]
name = "rsyslog"
version = "0.1.0"
authors = ["Filippos Vasilakis <vasilakisfil@gmail.com>"]
edition = "2018"
description = "RFC 5424 customizable syslog parser"
repository = "https://github.com/vasilakisfil/rsyslog"
keywords = ["syslog", "5424", "rfc5424", "parser" "logging"]
categories = ["parser-implementations", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "6.1.2", features = ["alloc", "regexp"] }
chrono = { version = "0.4.19", optional = true}
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[features]
serde-serialize = ["serde", "serde_derive"]
chrono-timestamp = ["chrono"]

[dev-dependencies]
criterion = { version = "0.3.4", features = ["html_reports"] }
syslog_rfc5424 = "0.7.0"

[[bench]]
name = "bench"
harness = false
