[package]
name = "rsyslog"
version = "0.1.4"
authors = ["Filippos Vasilakis <vasilakisfil@gmail.com>"]
edition = "2021"
description = "RFC 5424 customizable syslog parser"
repository = "https://github.com/vasilakisfil/rsyslog"
keywords = ["syslog", "5424", "rfc5424", "parser", "logging"]
categories = ["parser-implementations", "parsing"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "7.1", default-features = false, features = ["alloc"] }
nom-regex = "0.2"
chrono = { version = "0.4", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
serde-serialize = ["serde", "chrono?/serde"]
chrono-timestamp = ["chrono"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
syslog_rfc5424 = "0.9"

[[bench]]
name = "bench"
harness = false
required-features = ["chrono-timestamp"]
